k8/service.yml
apiVersion: v1
kind: Service
metadata:
  name: fsl-challenge-service
  namespace: production
  labels:
    app: fsl-challenge-app
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: fsl-challenge-app
